--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "coehercer",
   "version": "0.1.0",
   "description": "Coeherce and validate your data",
-  "main": "dist/bundle.cjs.js",
-  "module": "dist/bundle.esm.js",
+  "main": "src/coehercer.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c",
-    "prepublishOnly": "npm run lint && npm run test:only",
-    "prepare": "npm run build"
+    "test": "npm run lint"
   },
   "author": "Fabrizio Ruggeri",
   "license": "MIT",
@@ -19,8 +15,6 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "rollup": "^0.58.2",
-    "rollup-plugin-local-resolve": "^1.0.7"
+    "eslint-plugin-import": "^2.11.0"
   }
 }
