--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ramiel/coerce",
+  "name": "@ramielcreations/coerce",
   "version": "0.1.0",
-  "description": "Coeherce and validate your data",
+  "description": "Coerce and validate your data",
   "main": "coercer.js",
   "scripts": {
     "lint": "eslint .",
