Add repository info to package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "author": "Fabrizio Ruggeri",
   "license": "MIT",
+  "repository": "github:ramiel/coerce",
   "dependencies": {
     "crocks": "^0.9.3"
   },
